--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+      - run: pip install pipenv
+      - run: pipenv install --deploy --system
       - run: pip install -r requirements.txt
       - run: python src/fetch_videos.py
         env:
