--- a/Pipfile
+++ b/Pipfile
@@ -1,22 +1,9 @@
-[[package]]
-name = "google-api-python-client"
-version = "*"
-
-[[package]]
-name = "python-dateutil"
-version = "*"
-
-[[package]]
-name = "hltv-async-api"
-version = "*"
-
-[[package]]
-name = "beautifulsoup4"
-version = "*"
-
-[[package]]
-name = "lxml"
-version = "*"
+[packages]
+google-api-python-client = "*"
+python-dateutil         = "*"
+hltv-async-api          = "*"
+beautifulsoup4          = "*"
+lxml                    = "*"
 
 [requires]
 python_version = "3.12"
