--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: '3.12'
       - run: pip install pipenv
-      - run: pipenv install --deploy ##--system
+      - run: pipenv install --deploy system
       - run: pip install -r requirements.txt
       - run: python src/fetch_videos.py
         env:
