--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: Configure YT_API_KEY
     steps:
       - name: Checkout
         uses: actions/checkout@v4
