--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ python-dateutil         = "*"
 hltv-async-api          = "*"
 beautifulsoup4          = "*"
 lxml                    = "*"
+requests                = "*"
 
 [requires]
 python_version = "3.12"
